--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@
     font-family: "Montserrat", serif;
 }
 
+.wrapper {
+    width: 1100px;
+    margin: 0 auto;
+}
+
 menu {
     width: 1300px;
     height: 100px;
@@ -17,7 +22,7 @@ menu {
 }
 
 .menu-logo img {
-    width: 50%;
+    width: 30%;
 }
 
 .menu-links ul {
@@ -39,3 +44,59 @@ menu {
     color: orangered;
 }
 
+
+header {
+    width: 100%;
+    height: 600px;
+    background-image: url(./images/bg-1.png);
+    background-size: cover;
+    color: #fff;
+    padding: 5rem 0;
+    text-align: center;
+}
+
+header p {
+    font-size: 20px;
+    margin: 2rem;
+}
+
+header p:first-child {
+    font-weight: 600;
+    font-size: 22px;
+}
+
+header h1 {
+    margin: 0 auto;
+    width: 800px;
+    word-wrap: break-word;
+    font-size: 3rem;
+}
+
+header button {
+    padding: 1rem 4rem;
+    border-radius: 15px;
+    border: 1px solid #fff;
+    background: transparent;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 5px 1px coral;
+  }
+  
+header button.btn-playstore {
+    background-color: coral;
+    border-color: coral;
+    margin-right: 1.5rem;
+}
+
+header button.btn-appstore {
+    box-shadow: 0 0 5px 1px #fff;
+}
+  
+header button.btn-appstore:hover {
+    background-color: coral;
+    border-color: coral;
+    box-shadow: 0 0 5px 1px coral;
+}
